src/components/CoverSection.css
video {
  pointer-events: none;
    object-fit: cover;
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: -1;
  }
  
  .cover-container {
    /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
    height: 100vh;
    /* padding-top: 15%; */
    padding: 100px;
    
    width: 100%;
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
    align-items: center;
    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
    object-fit: contain;
  }
  
  .cover-container > h1 {
    color: #fff;
    font-size: 100px;
    margin-top: -100px;
    padding-top: 20%;

  }
  
  .cover-container > p {
    margin-top: 8px;
    color: #fff;
    font-size: 23px;
    line-height: 1.4;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
      'Lucida Sans', Arial, sans-serif;
  }
  
  .cover-btns {
    margin-top: 32px;
  }
  .cover-btns > p {
    color: #fff;
    position: center;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
    'Lucida Sans', Arial, sans-serif;
    
  }
  
  .cover-btns .btn {
    margin: 6px;
  }
  
  .fa-play-circle {
    margin-left: 4px;
  }
  
  @media screen and (max-width: 960px) {
    .cover-container > h1 {
      font-size: 70px;
      margin-top: -150px;
      padding-top: 40%;
    }
  }
  
  @media screen and (max-width: 768px) {
    .cover-container > h1 {
      font-size: 50px;
      margin-top: -100px;
      padding-top: 40%;
    }
  
    .cover-container > p {
      font-size: 15px;
    }
  
    .btn-mobile {
      display: block;
      text-decoration: none;
    }
  
    .btn {
      width: 100%;
    }
  }
  

